--- a/bin/mesibo-sync.service
+++ b/bin/mesibo-sync.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=mesibo sync server
-Documentation=http://mesibo.com
+Documentation=https://mesibo.com
 After=network-online.target remote-fs.target nss-lookup.target
 Wants=network-online.target
 
@@ -8,7 +8,6 @@ Wants=network-online.target
 User=root
 Group=root
 ExecStart=/mesibo/bin/mesibo-sync.sh
-ExecStop=pkill -9 mesibo-sync.sh
 
 [Install]
 WantedBy=multi-user.target
